[package]
name = "z"
version = "0.1.0"
edition = "2021"
description = "LLM tool for XML modification with ML analysis"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# CSV/TSV parsing
csv = "1.3"
serde = { version = "1", features = ["derive"] }

# HTTP client (minimal deps, blocking)
ureq = { version = "2", features = ["json"] }

# ML (pure Rust, no BLAS)
linfa = "0.7"
linfa-clustering = "0.7"
ndarray = "0.15"

# XML
quick-xml = "0.31"

# Error handling
thiserror = "1"

# Signal handling
ctrlc = "3"

# JSON for tool definitions and responses
serde_json = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
